tests/fixtures/invalid/pow_bytes_set_none.py
# Cannot call pow() with Bytes, Set[int], None
x = pow(b"hello", {1, 2, 3}, None)
